<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/result"
            app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:focusable="false" android:focusableInTouchMode="false"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operation" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/newNumber" android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/newNumber" android:textStyle="bold"
            android:textSize="18sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:id="@+id/newNumber" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/result" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button0"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
            app:layout_constraintStart_toStartOf="@+id/button1"/>
    <Button
            android:text="@string/_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button4"/>
    <Button
            android:text="@string/_3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button6" app:layout_constraintStart_toStartOf="@+id/button6"/>
    <Button
            android:text="@string/_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button5"/>
    <Button
            android:text="@string/_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button5"
            app:layout_constraintStart_toStartOf="@+id/button7"/>
    <Button
            android:text="@string/_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button6"
            app:layout_constraintStart_toStartOf="@+id/button8"/>
    <Button
            android:text="@string/_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:minWidth="48dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button9" app:layout_constraintStart_toStartOf="@+id/button9"/>
    <Button
            android:text="@string/_7"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button8" app:layout_constraintEnd_toStartOf="@+id/button8"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button9" app:layout_constraintEnd_toStartOf="@+id/button9"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/_9"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:id="@+id/button9"
            android:minWidth="48dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/newNumber" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/divideSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDivide"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button9" app:layout_constraintStart_toEndOf="@+id/button9"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/multiplySymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMultiply"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button6"
            app:layout_constraintStart_toStartOf="@+id/buttonDivide"/>
    <Button
            android:text="@string/minusSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMinus"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/buttonMultiply"/>
    <Button
            android:text="@string/additionSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPlus"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
            app:layout_constraintStart_toStartOf="@+id/buttonMinus"/>
    <Button
            android:text="@string/decimalSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDot"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
            app:layout_constraintStart_toStartOf="@+id/button2"/>
    <Button
            android:text="@string/equalsSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEquals"
            android:minWidth="48dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button3" app:layout_constraintStart_toStartOf="@+id/button3"/>
    <Button
            android:text="(-)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonNeg"
            android:minWidth="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonDivide"
            app:layout_constraintStart_toEndOf="@+id/buttonDivide" android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>